Fixed white line on mobile devices
Added some media queries in the body element.

--- a/assets/css/2-basics/_body-element.sass
+++ b/assets/css/2-basics/_body-element.sass
@@ -6,3 +6,11 @@ body
   color: #666
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+
+@media (max-width: 800px)
+  body
+    width: 100%
+    height: 100%
+    margin: 0px
+    padding: 0px
+    overflow-x: hidden
