--- a/assets/css/4-pages/_header.sass
+++ b/assets/css/4-pages/_header.sass
@@ -19,7 +19,8 @@ header
         
 @media (max-width: 800px)
     header
-        
+        width: 100%
+        margin: 0 auto
     
         .hero
             width: 75%
