--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,6 +206,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
+@media (max-width: 800px) {
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; } }
 ::selection {
   background: #FFF498; }
 
@@ -395,8 +402,11 @@ header {
     margin-top: 20%; }
 
 @media (max-width: 800px) {
-  header .hero {
-    width: 75%; } }
+  header {
+    width: 100%;
+    margin: 0 auto; }
+    header .hero {
+      width: 75%; } }
 .about {
   float: left;
   height: 500px;
